Fixed menu spacing

--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,7 @@ p {
   width: 70vw;
   margin-left: 10vw;
   padding-top: 5vh;
-  padding-bottom: 10vh;
+  padding-bottom: 300vh;
 }
 
 .break {
@@ -262,7 +262,7 @@ a:hover {
 
 #profile {
   display: inline-block;
-  width: 10vh;
+  width: 20vw;
 }
 
 .landing {
